--- a/package.json
+++ b/package.json
@@ -8,10 +8,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@element-plus/icons-vue": "^1.1.4",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "element-plus": "^2.1.10",
+    "moment": "^2.29.3",
+    "qrcode.vue": "^3.3.3",
+    "unplugin-icons": "^0.14.1",
+    "uuid": "^8.3.2",
+    "vform3-builds": "^3.0.6",
+    "vue": "3.2.26",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
-    "vite": "^2.9.5"
+    "node-sass": "^7.0.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
+    "vite": "2.7.3"
   }
 }
