--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vform3-builds": "^3.0.6",
     "vue": "3.2.26",
     "vue-axios": "^3.4.1",
+    "vue-esign": "^1.1.0",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
