--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "element-plus": "^2.1.10",
+    "element-plus": "^2.2.2",
     "jeeplus-bpmn": "^6.0.10",
     "moment": "^2.29.3",
     "qrcode.vue": "^3.3.3",
@@ -19,6 +19,7 @@
     "vform3-builds": "^3.0.6",
     "vue": "3.2.26",
     "vue-axios": "^3.4.1",
+    "vue-clipboard3": "^2.0.0",
     "vue-esign": "^1.1.0",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
